--- a/app/assets/themes/bauhaus.css
+++ b/app/assets/themes/bauhaus.css
@@ -354,9 +354,7 @@
 
 #wemd .footnote-num {
     font-weight: 900;
-    color: #fff;
-    background: #D32F2F;
-    padding: 2px 6px;
+    color: #D32F2F;
     margin-right: 6px;
 }
 
