fix: update navbar comment
Co-authored-by: haozan <haozanlawyer@gmail.com>

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<!-- Solid Navbar - Professional sticky design with strong shadow -->
+不到<!-- Solid Navbar - Professional sticky design with strong shadow -->
 <!--
 STYLE VARIANTS - Uncomment or modify classes below to customize:
 
