--- a/app/views/profiles/edit_password.html.erb
+++ b/app/views/profiles/edit_password.html.erb
@@ -1,16 +1,16 @@
 <div class="container-sm py-12">
     <div class="card-elevated">
       <div class="card-body">
-        <h1 class="text-2xl font-bold text-primary mb-8">Change Password</h1>
+        <h1 class="text-2xl font-bold text-primary mb-8">修改密码</h1>
 
         <%= form_with model: @user, url: update_password_profile_path, method: :patch, local: true, class: "space-y-6" do |form| %>
           <div>
             <%= form.label :current_password, required: true do %>
-              Current Password
+              当前密码
             <% end %>
-            <%= form.password_field :current_password, required: true, autocomplete: "current-password", placeholder: "Enter current password" %>
+            <%= form.password_field :current_password, required: true, autocomplete: "current-password", placeholder: "请输入当前密码" %>
             <div class="form-help">
-              Please enter your current password to confirm identity
+              请输入当前密码以确认身份
             </div>
           </div>
 
@@ -18,21 +18,21 @@
 
           <div>
             <%= form.label :password, required: true do %>
-              New Password
+              新密码
             <% end %>
-            <%= form.password_field :password, required: true, autocomplete: "new-password", placeholder: "Enter new password" %>
+            <%= form.password_field :password, required: true, autocomplete: "new-password", placeholder: "请输入新密码" %>
             <div class="form-help">
-              At least <%= User::MIN_PASSWORD %> characters
+              至少 <%= User::MIN_PASSWORD %> 个字符
             </div>
           </div>
 
           <div>
             <%= form.label :password_confirmation, required: true do %>
-              Confirm New Password
+              确认新密码
             <% end %>
-            <%= form.password_field :password_confirmation, required: true, autocomplete: "new-password", placeholder: "Re-enter new password" %>
+            <%= form.password_field :password_confirmation, required: true, autocomplete: "new-password", placeholder: "请再次输入新密码" %>
             <div class="form-help">
-              Please re-enter your new password
+              请再次输入您的新密码
             </div>
           </div>
 
@@ -42,15 +42,15 @@
                 <path fill-rule="evenodd" d="M8.257 3.099c.765-1.36 2.722-1.36 3.486 0l5.58 9.92c.75 1.334-.213 2.98-1.742 2.98H4.42c-1.53 0-2.493-1.646-1.743-2.98l5.58-9.92zM11 13a1 1 0 11-2 0 1 1 0 012 0zm-1-8a1 1 0 00-1 1v3a1 1 0 002 0V6a1 1 0 00-1-1z" clip-rule="evenodd"></path>
               </svg>
               <p class="text-sm">
-                <strong>Important:</strong> You will be signed out of all your other devices after changing your password.
+                <strong>重要提示：</strong>修改密码后，您将从其他所有设备上退出登录。
               </p>
             </div>
           </div>
 
           <div class="pt-4">
             <div class="flex justify-end space-x-3">
-              <%= form.submit "Update Password", class: "btn-primary" %>
-              <%= link_to "Cancel", profile_path, class: "btn-ghost" %>
+              <%= form.submit "更新密码", class: "btn-primary" %>
+              <%= link_to "取消", profile_path, class: "btn-ghost" %>
             </div>
           </div>
         <% end %>
