--- a/app/views/shared/_user_dropdown.html.erb
+++ b/app/views/shared/_user_dropdown.html.erb
@@ -41,7 +41,7 @@
         <svg class="w-4 h-4 mr-3" fill="currentColor" viewBox="0 0 20 20">
           <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd"/>
         </svg>
-        Profile
+        个人资料
       <% end %>
 
       <%= link_to devices_session_path, class: "flex items-center px-4 py-2 text-sm text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors" do %>
@@ -50,7 +50,7 @@
           <path d="M3 7v3c0 1.657 3.134 3 7 3s7-1.343 7-3V7c0 1.657-3.134 3-7 3S3 8.657 3 7z"/>
           <path d="M17 5c0 1.657-3.134 3-7 3S3 6.657 3 5s3.134-3 7-3 7 1.343 7 3z"/>
         </svg>
-        Devices
+        设备管理
       <% end %>
     </div>
 
@@ -60,7 +60,7 @@
         <svg class="w-4 h-4 mr-3" fill="currentColor" viewBox="0 0 20 20">
           <path fill-rule="evenodd" d="M3 3a1 1 0 00-1 1v12a1 1 0 102 0V4a1 1 0 00-1-1zm10.293 9.293a1 1 0 001.414 1.414l3-3a1 1 0 000-1.414l-3-3a1 1 0 10-1.414 1.414L14.586 9H7a1 1 0 100 2h7.586l-1.293 1.293z" clip-rule="evenodd"/>
         </svg>
-        Sign Out
+        退出登录
       <% end %>
     </div>
   </div>
