chore: update UI text and version to v1.0.13
- Change copy button text from '复制到微信' to '复制到公众号后台'
- Update homepage features to highlight image upload and operational insights
- Bump version to v1.0.13

Co-authored-by: haozan <haozanlawyer@gmail.com>

--- a/app/views/documents/edit.html.erb
+++ b/app/views/documents/edit.html.erb
@@ -64,7 +64,7 @@
                   data-wemd-editor-target="copyButton"
                   data-action="click->wemd-editor#copyToWechat">
             <%= lucide_icon "copy", class: "w-5 h-5 md:w-6 md:h-6" %>
-            <span>复制到微信</span>
+            <span>复制到公众号后台</span>
           </button>
         </div>
       </div>
